--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="col-md-3 q-audio-and-image-formatting">
             {% if item.audio_quiz %}
-            <audio controls class="quiz-audio-button mb-2"> <!-- Margin-bottom between the two audio elements -->
+            <audio controls class="quiz-audio-button mb-2">
                 <source src="{{ url_for('static', filename='audio/' + item.audio_quiz) }}" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
@@ -31,11 +31,16 @@
             <form action="{{ url_for('quiz', quiz_id=quiz_id) }}" method="post">
                 <div class="option-container d-flex justify-content-center flex-wrap">
                     {% for option in item.options %}
-                    <button type="button" class="btn btn-outline-primary option-button mx-2 my-1">
+                    <button type="button" class="btn btn-outline-primary option-button mx-2 my-1" onclick="selectAnswer('{{ option }}')">
                         {{ option }}
                     </button>
                     {% endfor %}
                 </div>
+                <!-- Submit Button for checking answers -->
+                <button type="submit" name="check_answer" class="btn btn-info mt-3">Submit Answer</button>
+                <input type="hidden" name="selectedAnswer" id="selectedAnswer">
+                <input type="hidden" name="attempts" value="{{ attempts }}">
+                <input type="hidden" name="score" value="{{ score }}">
             </form>
         </div>
     </div>
@@ -44,14 +49,12 @@
     <div class="row">
         <div class="col-md-12 text-center">
             <form action="{{ url_for('quiz', quiz_id=quiz_id) }}" method="post">
-                <button id="submit-answer" class="next-button-style btn btn-primary">Next</button>
+                <button id="submit-answer" name="next_question" class="next-button-style btn btn-primary mt-3">Next Question</button>
                 {% if feedback %}
                 <div id="feedback-container" class="alert alert-info feedback-style mx-auto mt-2">
                     {{ feedback }}
                 </div>
                 {% endif %}
-                <input type="hidden" name="answer" id="selectedAnswer">
-                <input type="hidden" name="attempts" value="{{ attempts }}">
                 <input type="hidden" name="score" value="{{ score }}">
             </form>
         </div>
@@ -63,4 +66,10 @@
 </div>
 
 <script src="{{ url_for('static', filename='js/quiz.js') }}"></script>
+<script>
+    function selectAnswer(option) {
+        const selectedAnswerInput = document.getElementById('selectedAnswer');
+        selectedAnswerInput.value = option;  // Set the value of the hidden input to the selected option
+    }
+</script>
 {% endblock %}
